# Ping_pong

./: CMakeLists.txt  README.md
include/: ConfigManager.h  Player.h
src/: ConfigManager.cpp  Ping_pong.cpp  Player.cpp  config.json  main.cpp
